docs: add prefix /api
